<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailedCourseActivity"
        android:contentDescription="@string/courses_scrollview"
>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
    >
        <TextView
                android:text="@string/detailed_courseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:id="@+id/detailed_courseTitle" android:layout_centerHorizontal="true"/>
        <TextView
                android:text="@string/detailed_courseStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_courseTitle"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:id="@+id/textView1"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textView1"
                android:layout_alignBaseline="@id/textView1"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="10dp"
                android:textStyle="italic"
                android:id="@+id/detailed_courseStart"/>
        <Button
                android:text="@string/courseStart_notification"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:textSize="11sp"
                android:layout_alignBaseline="@id/detailed_courseStart"
                android:layout_below="@id/detailed_courseTitle"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#03A9F4"
                android:id="@+id/courseStart_notification" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/detailed_courseEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_courseStart"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:id="@+id/textView2"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textView2"
                android:layout_alignBaseline="@id/textView2"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="10dp"
                android:textStyle="italic"
                android:id="@+id/detailed_courseEnd"/>
        <Button
                android:text="@string/courseEnd_notification"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:textSize="11sp"
                android:layout_alignBaseline="@id/detailed_courseEnd"
                android:layout_below="@id/courseStart_notification"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#03A9F4"
                android:id="@+id/courseEnd_notification" android:layout_marginTop="-2dp"/>
        <TextView
                android:text="@string/detailed_courseStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_courseEnd"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:id="@+id/textView3"
                tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="182dp"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textView3"
                android:layout_alignBaseline="@id/textView3"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="10dp"
                android:textStyle="italic"
                android:id="@+id/detailed_courseStatus"/>
        <TextView
                android:text="@string/detailed_instructorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_courseStatus"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:id="@+id/textView4"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textView4"
                android:layout_alignBaseline="@id/textView4"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="10dp"
                android:textStyle="italic"
                android:id="@+id/detailed_instructorName"/>
        <TextView
                android:text="@string/detailed_instructorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_instructorName"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:id="@+id/textView5"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textView5"
                android:layout_alignBaseline="@id/textView5"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="10dp"
                android:textStyle="italic"
                android:id="@+id/detailed_instructorPhone"/>
        <TextView
                android:text="@string/detailed_instructorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_instructorPhone"
                android:textStyle="bold"
                android:id="@+id/textView6"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textView6"
                android:layout_alignBaseline="@id/textView6"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="10dp"
                android:textStyle="italic"
                android:id="@+id/detailed_instructorEmail"/>
        <TextView
                android:text="@string/detailed_courseAssessments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_instructorEmail"
                android:textStyle="bold"
                android:id="@+id/detailed_courseAssessments"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
        />
        <ImageButton
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="#03A9F4"
                app:srcCompat="@drawable/baseline_add_24"
                android:layout_alignParentEnd="true"
                android:baselineAlignBottom="true"
                android:layout_alignBaseline="@id/detailed_courseAssessments"
                android:id="@+id/assessmentAddBtn"
                android:layout_marginStart="5dp" android:contentDescription="@string/add_assessment"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_courseAssessments"
                android:id="@+id/detailed_courseAssessmentsRecyclerView"
                android:layout_marginBottom="16dp"
        >
        </androidx.recyclerview.widget.RecyclerView>
        <TextView
                android:text="@string/detailed_courseNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_courseAssessmentsRecyclerView"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:id="@+id/detailed_courseNotes"/>
        <ImageButton
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="#03A9F4"
                app:srcCompat="@drawable/baseline_add_24"
                android:layout_alignParentEnd="true"
                android:baselineAlignBottom="true"
                android:layout_alignBaseline="@id/detailed_courseNotes"
                android:id="@+id/noteAddBtn"
                android:layout_marginStart="5dp" android:contentDescription="@string/add_note"/>
        <EditText
                android:hint="@string/newNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailed_courseNotes"
                android:inputType="textMultiLine"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                android:id="@+id/detailed_courseNewNote" android:autofillHints="New Note"/>
        <Button
                android:text="@string/detailed_saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/courseSaveBtn"
                android:layout_marginTop="20dp"
                android:layout_below="@id/deletedNoteBtn"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:backgroundTint="#03A9F4"/>
        <Button
                android:text="@string/saveNote"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textSize="11sp"
                android:layout_below="@id/detailed_courseNewNote"
                android:layout_marginStart="0dp"
                android:layout_alignParentStart="true"
                android:id="@+id/saveNoteBtn" />
        <Button
                android:text="@string/shareNote"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textSize="11sp"
                android:layout_below="@id/detailed_courseNewNote"
                android:layout_centerHorizontal="true"
                android:id="@+id/shareNoteBtn" />
        <Button
                android:text="@string/deleteNote"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textSize="11sp"
                android:layout_marginEnd="0dp"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@id/saveNoteBtn"
                android:id="@+id/deletedNoteBtn"/>


    </RelativeLayout>

</ScrollView>