<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailedAssessmentActivity">
    <TextView
            android:id="@+id/detailed_assessmentTitle"
            android:text="@string/detailed_assessmentTitle"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/textView21"
            android:text="@string/detailed_assessmentStartDate"
            android:layout_below="@id/detailed_assessmentTitle"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/detailed_assessmentStartDate"
            android:text=""
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_alignBaseline="@id/textView21"
            android:layout_toEndOf="@id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/textView29"
            android:text="@string/detailed_assessmentEndDate"
            android:layout_below="@id/detailed_assessmentStartDate"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/detailed_assessmentEndDate"
            android:text=""
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_alignBaseline="@id/textView29"
            android:layout_toEndOf="@id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/textView22"
            android:text="@string/detailed_assessmentType"
            android:layout_below="@id/textView29"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/detailed_assessmentType"
            android:text=""
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_alignBaseline="@id/textView22"
            android:layout_toEndOf="@id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textColor="#FF0303"/>
    <Button
            android:text="@string/detailed_assessmentSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#03A9F4"
            android:id="@+id/assessment_save"/>

    <Button
            android:text="@string/assessmentStart_notification"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:textSize="11sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/detailed_assessmentStartDate"
            android:id="@+id/assessmentStart_notification"
            android:backgroundTint="#03A9F4"/>
    <Button
            android:text="@string/assessmentEnd_notification"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:textSize="11sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/detailed_assessmentEndDate"
            android:id="@+id/assessmentEnd_notification"
            android:backgroundTint="#03A9F4"/>

</RelativeLayout>