<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#009688" app:cardElevation="10dp" android:layout_margin="15dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:padding="15dp">

            <TextView
                    android:text="@string/termsTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/term" android:textSize="30sp"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/startTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/startDate"
                    android:layout_below="@id/term" android:textSize="16sp"/>
            <TextView
                    android:text="@string/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/separator"
                    android:layout_marginEnd="-21dp" android:layout_toEndOf="@id/startDate"
                    android:layout_marginStart="-1dp" android:layout_alignBottom="@id/startDate"
                    android:layout_marginBottom="0dp"/>
            <TextView
                    android:text="@string/endTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/endDate"
                    android:layout_toEndOf="@id/startDate" android:layout_marginStart="24dp"
                    android:layout_alignBottom="@id/startDate" android:layout_marginBottom="0dp"
                    android:textSize="16sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>